{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 9,
  "lineage": "e0d2cf04-b450-5413-9569-1d4c22f808bb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.46.20.122",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-05-24T23:05:25.141-07:00",
            "id": "projects/project-75c809f3-652f-4ed3-a4c/regions/us-central1/addresses/nginx-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "nginx-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "project-75c809f3-652f-4ed3-a4c",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/regions/us-central1/addresses/nginx-static-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-24T23:05:23.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-75c809f3-652f-4ed3-a4c/global/firewalls/nginx-allow-http",
            "log_config": [],
            "name": "nginx-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/global/networks/default",
            "priority": 1000,
            "project": "project-75c809f3-652f-4ed3-a4c",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/global/firewalls/nginx-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nginx-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-24T23:05:24.705-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-75c809f3-652f-4ed3-a4c/global/firewalls/nginx-allow-ssh",
            "log_config": [],
            "name": "nginx-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/global/networks/default",
            "priority": 1000,
            "project": "project-75c809f3-652f-4ed3-a4c",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/global/firewalls/nginx-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nginx-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/zones/us-central1-a/disks/nginx-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "name": "nginx-vm"
            },
            "enable_display": false,
            "id": "projects/project-75c809f3-652f-4ed3-a4c/zones/us-central1-a/instances/nginx-vm",
            "instance_id": "3794353160915408989",
            "label_fingerprint": "xesIESTQXjo=",
            "labels": {
              "name": "nginx-vm"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "rqE-cdQ3DXo=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y nginx\nsystemctl start nginx\nsystemctl enable nginx\n",
            "name": "nginx-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.46.20.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/regions/us-central1/subnetworks/default",
                "subnetwork_project": "project-75c809f3-652f-4ed3-a4c"
              }
            ],
            "project": "project-75c809f3-652f-4ed3-a4c",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75c809f3-652f-4ed3-a4c/zones/us-central1-a/instances/nginx-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nginx-server"
            ],
            "tags_fingerprint": "mVdp3NT8oTk=",
            "terraform_labels": {
              "name": "nginx-vm"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.nginx"
          ]
        }
      ]
    }
  ]
}